# anet_api

./: .gitignore  Pipfile  README.md  alembic.ini  experimenting.ipynb  main.py  populate_data.ipynb  pyproject.toml  settings.py  test_main.py
anet_api/: constants.py  main.py  views.py
anet_api/anet/: __init__.py  models.py  routers.py
anet_api/api/: __init__.py  anet_models.py
anet_api/db/: __init__.py  alembic.ini  database.py  models.py  routers.py  utils.py
anet_api/db/migrations/: env.py
anet_api/db/migrations/versions/: 202312191139_31e8fac74724_.py  202409270929_dc9d543f28cd_change_name_to_meet.py  202412191500_8ca31ca240f3_add_race_model.py  202412191530_052840a662da_fix_race_anet_id_name.py  202412191824_597c2c3967e6_convert_zipcode_to_str.py  202412201403_5f13d40398dc_add_course_model.py  3ed2fd85afd4_.py  def3ae8bc799_.py
anet_api/db/models/: __init__.py  athlete.py  base.py  meet.py  race.py  result.py  team.py
anet_api/routers/: __init__.py  athlete.py  meet.py  search.py  team.py
db/: __init__.py  alembic.ini  models.py  utils.py
db/migrations/versions/: 3029a4c1773c_.py  3510fead807a_.py  4f9db59dc5d8_init.py  6bf761b42297_.py  ac4a19196bfb_.py  ad583e0b8d19_.py
notebooks/: populate_data.ipynb
tests/: conftest.py  data.py  test_anet.py  test_athlete.py  test_main.py  test_meet.py  test_race.py  test_team.py  test_utils.py
