[tool.poetry]
name = "anet-api"
version = "0.1.0"
description = "Athletic.net API wrapper"
authors = ["Ben Neiman <bensneiman@gmail.com>"]
readme = "README.md"
packages = [{include = "anet_api"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
numpy = "^1.26.2"
requests = "^2.31.0"
fastapi = {version = "0.99.1", extras = ["all"]}
sqlmodel = "^0.0.12"
pytest = "^7.4.3"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"